--- a/style.css
+++ b/style.css
@@ -27,9 +27,17 @@ h1 {
 .right {
   width: 45%;
 }
-.nadine {
+.contt {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-items: center;
+}
+img.nadine {
+  margin: 20px;
   max-width: 200px;
-  border-radius: 15px;
+  border-radius: 25px;
+  border: solid #d7ebba 2px;
 }
 .nadine:hover {
   cursor: pointer;
@@ -70,17 +78,23 @@ p {
 }
 .icons {
   margin-right: 25px;
-  margin-left: 25px;
 }
 .paragraph {
   margin-top: 10px;
   margin-bottom: 20px;
 }
 
-@media screen and (max-width: 666px) {
+@media screen and (max-width: 720px) {
   .icon {
     justify-content: center;
     align-items: center;
+  }
+  .contt {
+    grid-template-columns: 1fr;
+  }
+  .nadine:nth-child(2),
+  .nadine:nth-child(3) {
+    display: none;
   }
 }
 @media screen and (max-width: 1111px) {
@@ -128,4 +142,36 @@ h3 {
 
 .right > .kotakright > .content > p {
   color: #9b1d20;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-img {
+  max-width: 90%;
+  max-height: 90%;
+  object-fit: contain;
+  border-radius: 10px;
+}
+
+.close-btn {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  color: white;
+  font-size: 40px;
+  cursor: pointer;
+}
+
+.close-btn:hover {
+  color: #ccc;
 }
