--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@ h1 {
 .left,
 .right {
   position: relative;
-  height: 200vh;
 }
 .left {
   width: 55%;
@@ -35,7 +34,7 @@ h1 {
 }
 img.nadine {
   margin: 20px;
-  max-width: 200px;
+  max-width: 80%;
   border-radius: 25px;
   border: solid #d7ebba 2px;
 }
@@ -55,11 +54,10 @@ p {
 .kotakleft {
   display: flex;
   position: sticky;
-  top: 112.125px;
+  top: 88px;
   flex-wrap: wrap;
   margin-left: 20px;
   margin-right: 20px;
-  margin-top: 112.125px;
   padding: 40px;
   border-radius: 25px;
   background-color: #9b1d20;
@@ -92,6 +90,9 @@ p {
   .contt {
     grid-template-columns: 1fr;
   }
+  img.nadine {
+    max-width: 40%;
+  }
   .nadine:nth-child(2),
   .nadine:nth-child(3) {
     display: none;
@@ -104,6 +105,7 @@ p {
     align-items: center;
   }
   .kotakleft {
+    margin-top: 50px;
     margin-right: 20px;
   }
   .left,
